# mediaDB

./: README.md  main.py
.devcontainer/: devcontainer.json
.github/workflows/: mediadb-models_tests.yaml  run_mediadb-models_tests.yaml
lib/models/: medias.py
mediadb-cli/: mediadb-cli.py
mediadb-models/: README.md  pyproject.toml  requirements.txt  tox.ini
mediadb-models/mediadb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mediadb-models/mediadb/models/: constants.py  medias.py
mediadb-models/tests/: test_models_constants.py  test_models_medias.py
test/: test_models_constants.py  test_models_medias.py
